added yellow header color

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   </head>
   <body>
     <h1>*** Hello World ***</h1>
+    <button class="btn btn-large btn-red">Click Me</button>
+    <input type="radio" name="radio" id="radio" class="radio" />
   </body>
 </html>
